fix: responsiveness – scaling on mobile screens

--- a/01-Zoo/styles.css
+++ b/01-Zoo/styles.css
@@ -55,7 +55,7 @@ span.section-title {
 
 /* HEADER: START */
 header {
-  height: 570px;
+  height: 457px;
   background: url(images/hero.png) no-repeat;
   background-size: 120%;
   background-position-x: 80%;
@@ -119,7 +119,7 @@ section#features .section-title + p {
   font-size: 24px;
   text-align: center;
   line-height: 2rem;
-  margin-bottom: 50px;
+  margin: 0 23px 50px;
 }
 section#features .features-grid .icon {
   width: 6rem;
@@ -131,7 +131,7 @@ section#features .features-grid .icon {
   margin-bottom: 65px;
 }
 section#features .features-grid .card {
-  margin: 0 2px;
+  margin: 0 4px;
 }
 section#features .features-grid .card:not(:nth-child(2)) .icon {
   background-color: white;
